# Foundry

./: BOOTSTRAP.md  DEVELOPMENT.md  Makefile  README.md  examples_minimal.py  pyproject.toml  requirements-dev.txt
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  FOUNDRY.md  LAB_NOTEBOOK.md  PHILOSOPHY.md  PREDICTIONS.md  QUESTIONS.md  ROADMAP.md
docs/adr/: 0001-core-language.md  0002-episode.md  0003-agent.md  0004-information-flows-through-observati  0005-world-is-authoritative.md
docs/repository/: ADR-R001-research-lineage.md
domains/manufacturing/: README.md
domains/marketing-research/: README.md
domains/navigation/: README.md
domains/poker/: README.md
experiments/: README.md
experiments/001-world-evolution/: README.md  counter_world.py
experiments/powerball/: README.md  run.py
foundry/agents/: README.md
foundry/core/: __init__.py  agent.py  decision.py  environment.py  event.py  jsonable.py  memory.py  observation.py  observer.py  simulation.py  world.py
foundry/engine/: README.md
foundry/environments/: README.md  __init__.py
foundry/models/: README.md
foundry/observers/: README.md
foundry/reports/: README.md
foundry/runtime/: __init__.py  episode.py
foundry/strategies/: README.md
foundry/utils/: README.md
research/evidence/: ER-001-observation.md  ER-002-episode.md
research/theory/: TR-001-observation.md  TR-002-episode.md
tests/: test_agent.py  test_application_integration.py  test_core_contracts.py  test_episode.py  test_observation.py  test_world.py
