[project]
name = "foundry"
version = "0.1.0"
description = "A framework for simulating adaptive agents operating in uncertain environments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
